examples/omni/apps/gateway/gw-puppet.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: puppet
  namespace: gateway
  annotations:
    cert-manager.io/issuer: cloudflare-issuer
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 192.168.2.201
  listeners:
    - protocol: HTTPS
      port: 443
      name: https-gateway
      hostname: "*.roguestarr.com"
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-roguestarr
      allowedRoutes:
        namespaces:
          from: All
